<resources>
    <string name="app_name">Minerva</string>
    <string name="welcome_to_minerva">Welcome to Minerva</string>
    <string name="username">Username</string>
    <string name="host_port_path">host:port/path</string>
    <string name="password">password</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_stranger">Welcome stranger</string>
    <string name="query">Query</string>
    <string name="search">search</string>
    <string name="log_out">Log out</string>
</resources>
